# deep-learning-rust

./: Cargo.toml
src/: main.rs
src/neural_network/: Cargo.toml
src/neural_network/data/sample_weight/: W1.csv  W2.csv  W3.csv  b1.csv  b2.csv  b3.csv
src/neural_network/src/: activation_functions.rs  diff_functions.rs  error_functions.rs  layers.rs  lib.rs  mnist.rs  net.rs  nnet_functions.rs
src/neural_network/tests/: diff_functions.rs  net.rs  nnet_functions.rs
src/perceptron/src/: lib.rs  perceptron.rs
