[workspace]
members = [
    "src/neural_network",
    "src/perceptron"
]

[package]
name = "deep-learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neural_network]
path = "src/neural_network"

[dependencies.perceptron]
path = "src/perceptron"

