[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
mnist = "0.6.0"
csv = "1.3.0"
ndarray-csv = "0.5.2"
serde = { version = "1.0.199", features = ["derive"] }
serde-pickle = "1.1.1"

